--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <html>
 
 	<head>
-	</head>
 
+        <title>Google</title>
+
+	</head>
+        
 	<body>
+
+        <h1>TEST</h1>
+
 	</body>
 	
 </html>
