first draft homepage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 	<head>
+
         <link href="style.css" type="text/css" rel="stylesheet" />
         <title>Google</title>
 
@@ -10,7 +11,68 @@
         
 	<body>
 
-        <h1>TEST</h1>
+        <div class="header">
+
+            <ul>
+
+                <li><a href="">Gmail</a></li>
+                <li><a href="">Images</a></li>
+
+            </ul>
+
+            <img src="images/grid_icon.png" />
+
+            <img id="signin" src="images/signin_icon.png" />
+
+        </div>
+
+        <div id="center_content">
+
+            <img src="images/google_logo_small.jpg" />
+
+            <form id="searchbox">
+
+                <input type="text" />
+
+            </form>
+
+        </div>
+
+        <div class="center_button">
+
+            <form id="search_button">
+
+                <input type="submit" value="Google Search" />
+
+            </form>
+
+            <form id="lucky_button">
+
+            <input type="submit" value="I'm Feeling Lucky" />
+
+            </form>
+
+        </div>
+
+        <div class="footer">
+
+            <ul id="list_left">
+
+                <li><a href="">Advertising</a></li>
+                <li><a href="">Business</a></li>
+                <li><a href="">About</a></li>
+
+            </ul>
+
+            <ul id="list_right">
+
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Terms</a></li>
+                <li><a href="">Settings</a></li>
+
+            </ul>
+
+        </div>
 
 	</body>
 	
